# webhub

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SUPPORT.md  azure-pipelines-cd.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  webhub.code-workspace
.copilot-tracking/sandbox/2026-07-19-webui-to-webhub-001/: rebrand-log.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/actions/setup-wasm/: action.yml
.github/skills/bump-version/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/create-example/: SKILL.md
.github/skills/diagnostics/: SKILL.md
.github/skills/docs-sync/: SKILL.md
.github/skills/perf/: SKILL.md
.github/skills/quality-gate/: SKILL.md
.github/skills/testing/: SKILL.md
.github/skills/webui-dev/: SKILL.md
.github/workflows/: docs.yml  pr-ffi.yml  pr.yml  publish.yml
crates/webhub/: Cargo.toml  README.md
crates/webhub-cli/: Cargo.toml  README.md
crates/webhub-cli/src/: main.rs
crates/webhub-cli/src/commands/: build.rs  common.rs  inspect.rs  mod.rs  serve.rs
crates/webhub-cli/src/utils/: error.rs  output.rs
crates/webhub-dev-server/: Cargo.toml  README.md
crates/webhub-dev-server/src/: lib.rs  livereload.rs  path.rs  reporter.rs  serve.rs  watch.rs  worker.rs
crates/webhub-discovery/: Cargo.toml  README.md
crates/webhub-discovery/src/: cache.rs  lib.rs  npm.rs
crates/webhub-expressions/: Cargo.toml  README.md
crates/webhub-expressions/benches/: expressions_bench.rs
crates/webhub-expressions/src/: lib.rs
crates/webhub-ffi/: Cargo.toml  README.md  build.rs
crates/webhub-ffi/benches/: protocol_bench.rs
crates/webhub-ffi/include/: webhub_ffi.h
crates/webhub-ffi/src/: lib.rs
crates/webhub-ffi/tests/: ffi_test.rs
crates/webhub-ffi/tests/csharp/: WebHubFFITest.cs
crates/webhub-ffi/tests/go/: go.mod  webhub_ffi.go  webhub_ffi_test.go
crates/webhub-ffi/tests/python/: test_webhub_ffi.py
crates/webhub-handler/: Cargo.toml  README.md
crates/webhub-handler/benches/: bootstrap_state_bench.rs  handler_bench.rs
crates/webhub-handler/src/: lib.rs  route_handler.rs  route_matcher.rs  route_renderer.rs
crates/webhub-handler/src/plugin/: fast_v2.rs  fast_v3.rs  mod.rs  webhub.rs
crates/webhub-node/: Cargo.toml  README.md
crates/webhub-node/src/: lib.rs
crates/webhub-parser/: Cargo.toml  README.md
crates/webhub-parser/benches/: parser_bench.rs
crates/webhub-parser/src/: asset_filename.rs  component_registry.rs  condition_parser.rs  css_parser.rs  diagnostic.rs  error.rs  handlebars_parser.rs  html_parser.rs  lib.rs  route_parser.rs
crates/webhub-parser/src/plugin/: fast_v2.rs  fast_v3.rs  mod.rs  webhub.rs
crates/webhub-press/: Cargo.toml  README.md  package.json
crates/webhub-press/components/code-block/: code-block.ts
crates/webhub-press/components/webhub-blockquote/: webhub-blockquote.ts
crates/webhub-press/components/webhub-press-tab/: webhub-press-tab.ts
crates/webhub-press/components/webhub-press-tab-panel/: webhub-press-tab-panel.ts
crates/webhub-press/components/webhub-press-tabs/: webhub-press-tabs.css  webhub-press-tabs.ts
crates/webhub-press/src/: build.rs  bundler.rs  content.rs  lib.rs  main.rs  markdown.rs  serve.rs  state.rs
crates/webhub-press/template/: index.html  index.ts
crates/webhub-press/template/docs-search/: docs-search.test.ts  docs-search.ts
crates/webhub-press/template/docs-theme-toggle/: docs-theme-toggle.ts
crates/webhub-protocol/: Cargo.toml  README.md  build.rs
crates/webhub-protocol/benches/: protocol_bench.rs
crates/webhub-protocol/proto/: webhub.proto
crates/webhub-protocol/src/: attrs.rs  gen_webhub.rs  lib.rs  projection_manifest.rs
crates/webhub-protocol/src/plugin/: mod.rs  webhub.rs
crates/webhub-state/: Cargo.toml  README.md
crates/webhub-state/benches/: state_bench.rs
crates/webhub-state/src/: lib.rs
crates/webhub-test-utils/: Cargo.toml  README.md
crates/webhub-test-utils/src/: lib.rs
crates/webhub-tokens/: Cargo.toml  README.md
crates/webhub-tokens/src/: lib.rs
crates/webhub-wasm/: Cargo.toml  README.md
crates/webhub-wasm/src/: error.rs  handler.rs  lib.rs  parser.rs
crates/webhub/benches/: README.md  contact_book_bench.rs  streaming_bench.rs
crates/webhub/examples/: streaming_e2e_ttfb_bench.rs  streaming_resource_bench.rs
crates/webhub/src/: component_assets.rs  error.rs  lib.rs  projection.rs  server.rs  streaming.rs
crates/webhub/tests/: example_apps_hydration.rs
docs/: .gitignore  ai.md  package.json
docs/.webhub-press/: config.json
docs/.webhub-press/state/: playground.json
docs/.webui-press/: theme.css
docs/guide/: index.md  installation.md  serverless-architecture.md  why.md
docs/guide/cli/: index.md
docs/guide/concepts/: best-practices.md  css-tokens.md  how-it-works.md  hydration.md  interactivity.md  performance.md  react-comparison.md  routing.md
docs/guide/integrations/: electron.md  ffi.md  index.md  node.md  rust.md  wasm.md
docs/tutorials/: hello-world.md  todo-app.md
dotnet/: Directory.Build.props  Directory.Build.targets  Microsoft.WebUI.sln
dotnet/runtime/: README.md
dotnet/runtime/Microsoft.WebUI.Runtime.linux-x64/: Microsoft.WebUI.Runtime.linux-x64.csproj
examples/: README.md  build-client.mjs
examples/demo/: Dockerfile  README.md  docker-entrypoint.sh  package.json
examples/demo/server/: Cargo.toml
examples/demo/server/src/: main.rs  process.rs  registry.rs  shell.rs
examples/integration/rust/: Cargo.toml  README.md
examples/integration/rust/src/: main.rs
examples/integration/ssr-performance-showdown/: Cargo.toml  README.md
examples/integration/ssr-performance-showdown/src/: main.rs
examples/integration/streaming-browser-bench/server/: Cargo.toml
examples/integration/streaming-browser-bench/server/src/: main.rs
prompts/: rebrand-webui-to-webhub.prompt.md
xtask/src/: build_examples.rs  build_wasm.rs  dev.rs  e2e.rs  e2e_approve.rs  license_headers.rs  main.rs  publish.rs  version.rs  windows_local.rs
(+148 files in other folders)
