[package]
name = "microsoft-webhub-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CLI tool for building webhub applications"
keywords = ["webhub", "cli", "build-tool", "ssr", "tooling"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "webhub"
path = "src/main.rs"

[dependencies]
microsoft-webhub = { path = "../webhub", version = "0.0.18", features = ["cli"] }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
microsoft-webhub-discovery = { path = "../webhub-discovery", version = "0.0.18" }
microsoft-webhub-tokens = { path = "../webhub-tokens", version = "0.0.18" }
microsoft-webhub-dev-server = { path = "../webhub-dev-server", version = "0.0.18" }
clap = { workspace = true }
anyhow = { workspace = true }
console = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
expand-tilde = { workspace = true }
mime_guess = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }

[lints]
workspace = true
