[package]
name = "microsoft-webhub-discovery"
description = "External component discovery for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "discovery", "components", "ssr", "tooling"]
categories = ["web-programming", "development-tools"]

[lib]
name = "webhub_discovery"

[dependencies]
anyhow = { workspace = true }
expand-tilde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
