[package]
name = "microsoft-webhub-expressions"
description = "Core expression evaluation for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "expressions", "evaluation", "templates", "ssr"]
categories = ["web-programming", "parser-implementations"]

[lib]
name = "webhub_expressions"

[dependencies]
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
microsoft-webhub-state = { path = "../webhub-state", version = "0.0.18" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
microsoft-webhub-test-utils = { path = "../webhub-test-utils", version = "0.0.18" }
criterion = { workspace = true }

[[bench]]
name = "expressions_bench"
harness = false

[lints]
workspace = true
