[package]
name = "microsoft-webhub-ffi"
description = "Core FFI bindings for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "ffi", "c-api", "bindings", "ssr"]
categories = ["api-bindings", "web-programming"]
exclude = ["build.rs"]

[lib]
name = "webhub_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[features]
# Enable to regenerate include/webhub_ffi.h via cbindgen during build.
# Off by default so crates.io consumers don't pull in cbindgen.
regenerate-header = ["dep:cbindgen"]

[dependencies]
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }

[[bench]]
name = "protocol_bench"
harness = false

[lints]
workspace = true
