[package]
name = "microsoft-webhub-handler"
description = "Core rust handler for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "rendering", "ssr", "templates", "server-side"]
categories = ["web-programming", "template-engine"]

[lib]
name = "webhub_handler"

[dependencies]
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
microsoft-webhub-expressions = { path = "../webhub-expressions", version = "0.0.18" }
microsoft-webhub-state = { path = "../webhub-state", version = "0.0.18" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
microsoft-webhub-test-utils = { path = "../webhub-test-utils", version = "0.0.18" }
criterion = { workspace = true }

[[bench]]
name = "handler_bench"
harness = false

[[bench]]
name = "bootstrap_state_bench"
harness = false

[lints]
workspace = true
