[package]
name = "microsoft-webhub-node"
description = "Node.js native addon for webhub framework via napi-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "nodejs", "napi", "ssr", "rendering"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "webhub_node"
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
microsoft-webhub = { path = "../webhub", version = "0.0.18" }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
microsoft-webhub-parser = { path = "../webhub-parser", version = "0.0.18", default-features = false }
tempfile = { workspace = true }

[lints]
workspace = true
