[package]
name = "microsoft-webhub-parser"
description = "Core parser for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "parser", "html", "templates", "ssr"]
categories = ["parser-implementations", "template-engine", "web-programming"]

[lib]
name = "webhub_parser"

[features]
default = ["fs"]
fs = ["walkdir"]
cli = ["clap"]

[package.metadata.cargo-shear]
# `clap` is used only via `cfg_attr(feature = "cli", derive(clap::ValueEnum))`
# attribute macros; cargo-shear doesn't expand macros by default and so
# reports a false positive without `--expand`.
ignored = ["clap"]

[dependencies]
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
microsoft-webhub-tokens = { path = "../webhub-tokens", version = "0.0.18" }
thiserror = { workspace = true }
html-escape = { workspace = true }
walkdir = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
sha2 = { workspace = true }

[dev-dependencies]
microsoft-webhub-test-utils = { path = "../webhub-test-utils", version = "0.0.18" }
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
