[package]
name = "microsoft-webhub-press"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance Static Site Generator powered by webhub Framework"
default-run = "webhub-press"
readme = "README.md"

[lib]
name = "webhub_docs"
path = "src/lib.rs"

[[bin]]
name = "webhub-press"
path = "src/main.rs"

[dependencies]
microsoft-webhub = { path = "../webhub", version = "0.0.18", features = ["cli"] }
microsoft-webhub-discovery = { path = "../webhub-discovery", version = "0.0.18" }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
microsoft-webhub-tokens = { path = "../webhub-tokens", version = "0.0.18" }

# Markdown + syntax highlighting
comrak = { workspace = true }
syntect = { workspace = true }

# Config + frontmatter
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }

# Performance
rayon = { workspace = true }

# Utilities
thiserror = { workspace = true }
html-escape = { workspace = true }

# Dev server (`webhub-press serve`)
microsoft-webhub-dev-server = { path = "../webhub-dev-server", version = "0.0.18" }
actix-web = { workspace = true }
tokio = { workspace = true }
include_dir = { workspace = true }
