[package]
name = "microsoft-webhub-state"
description = "Core state management for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "state", "ssr", "rendering", "templates"]
categories = ["web-programming"]

[lib]
name = "webhub_state"

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
microsoft-webhub-test-utils = { path = "../webhub-test-utils", version = "0.0.18" }
criterion = { workspace = true }

[[bench]]
name = "state_bench"
harness = false

[lints]
workspace = true
