[package]
name = "microsoft-webhub-test-utils"
description = "Test utilities for webhub framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "testing", "test-utils", "ssr", "mocking"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "webhub_test_utils"

[dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }

[lints]
workspace = true
