[package]
name = "microsoft-webhub-wasm"
description = "WebAssembly bindings for webhub framework — powers the online playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "wasm", "webassembly", "ssr", "rendering"]
categories = ["wasm", "web-programming"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "webhub_wasm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["all"]
all = ["handler", "parser"]
handler = ["dep:microsoft-webhub-handler"]
parser = ["dep:microsoft-webhub-parser"]

[dependencies]
microsoft-webhub-parser = { path = "../webhub-parser", version = "0.0.18", default-features = false, optional = true }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18", optional = true }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
