[package]
name = "microsoft-webhub"
description = "Programmatic API for the webhub build-time rendering framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webhub", "ssr", "rendering", "templates", "server-side"]
categories = ["web-programming", "template-engine"]

[lib]
name = "webhub"

[features]
cli = ["microsoft-webhub-parser/cli"]

[dependencies]
microsoft-webhub-parser = { path = "../webhub-parser", version = "0.0.18" }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
microsoft-webhub-discovery = { path = "../webhub-discovery", version = "0.0.18" }
microsoft-webhub-tokens = { path = "../webhub-tokens", version = "0.0.18" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
memchr = { workspace = true }
crossbeam-queue = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
microsoft-webhub-handler = { path = "../webhub-handler", version = "0.0.18" }
microsoft-webhub-protocol = { path = "../webhub-protocol", version = "0.0.18" }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true }

[[bench]]
name = "contact_book_bench"
harness = false

[[bench]]
name = "streaming_bench"
harness = false

[[example]]
name = "streaming_resource_bench"
path = "examples/streaming_resource_bench.rs"

[[example]]
name = "streaming_e2e_ttfb_bench"
path = "examples/streaming_e2e_ttfb_bench.rs"

[lints]
workspace = true
