[package]
name = "demo-shell"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "demo-shell"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
awc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
mime_guess = { workspace = true }
microsoft-webhub = { path = "../../../crates/webhub" }
microsoft-webhub-handler = { path = "../../../crates/webhub-handler" }
microsoft-webhub-protocol = { path = "../../../crates/webhub-protocol" }

[lints]
workspace = true
