[package]
name = "webhub-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "webhub-rust-example"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
microsoft-webhub-protocol = { path = "../../../crates/webhub-protocol" }
microsoft-webhub-handler = { path = "../../../crates/webhub-handler" }
anyhow = { workspace = true }

[lints]
workspace = true
