[package]
name = "ssr-performance-showdown"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "webhub-ssr-test"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
microsoft-webhub-protocol = { path = "../../../crates/webhub-protocol" }
microsoft-webhub-handler = { path = "../../../crates/webhub-handler" }
actix-web = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
