[package]
name = "streaming-browser-bench-server"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "streaming-browser-bench-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
microsoft-webhub = { path = "../../../../crates/webhub" }
microsoft-webhub-handler = { path = "../../../../crates/webhub-handler" }
actix-web = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
